--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 section {
   padding: 0px 20px;
   min-height: 100vh;
@@ -41,6 +42,14 @@ section {
   text-align: center;
   overflow: hidden;
 }
+.hero #particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2111; /* 배경으로 만들고 싶다면 */
+  top: 0;
+  left: 0;
+}
 .hero video {
   position: absolute;
   top: 0;
@@ -60,6 +69,11 @@ section {
   color: #fff;
   font-family: "Caprasimo", serif;
 }
+@media (max-width: 768px) {
+  .hero .title {
+    font-size: 1.8rem;
+  }
+}
 .hero .title .char {
   display: inline-block;
   opacity: 0;
@@ -69,6 +83,11 @@ section {
   font-size: 5.5rem;
   color: #00ffff;
   text-shadow: 0 0 8px #00ffff;
+}
+@media (max-width: 768px) {
+  .hero .title .name-highlight .char {
+    font-size: 2rem;
+  }
 }
 
 .about {
