--- a/css/main.scss
+++ b/css/main.scss
@@ -39,7 +39,14 @@ section {
   justify-content: center;
   text-align: center;
   overflow: hidden;
-
+  #particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 2111; /* 배경으로 만들고 싶다면 */
+    top: 0;
+    left: 0;
+  }
   video {
     position: absolute;
     top: 0; left: 0;
@@ -57,6 +64,9 @@ section {
     font-weight: 400;
     color: #fff;
      font-family: "Caprasimo", serif;
+     @media(max-width:768px){
+      font-size: 1.8rem;
+     }
     .char {
       display: inline-block;
       opacity: 0;
@@ -67,7 +77,9 @@ section {
       font-size: 5.5rem;
       color: #00ffff;
       text-shadow: 0 0 8px #00ffff;
-      
+      @media(max-width:768px){
+        font-size: 2rem;
+      }
     }
   }
 }
